xpcom/reflect/xptcall/md/unix/xptcstubs_pa32.cpp
@@ -126,11 +126,21 @@ PrepareAndDispatch(nsXPTCStubBase* self, uint32_t methodIndex,
 
 extern "C" nsresult SharedStub(int);
 
+#ifdef __GNUC__
+#define STUB_ENTRY(n)       \
+nsresult nsXPTCStubBase::Stub##n()  \
+{                           \
+    /* Save arg0 in its stack slot.  This assumes the frame size is 64. */ \
+    __asm__ __volatile__ ("STW %r26, -36-64(%sp)"); \
+    return SharedStub(n);   \
+}
+#else
 #define STUB_ENTRY(n)       \
 nsresult nsXPTCStubBase::Stub##n()  \
 {                           \
     return SharedStub(n);   \
 }
+#endif
 
 #define SENTINEL_ENTRY(n) \
 nsresult nsXPTCStubBase::Sentinel##n() \
